--- a/online/assets/sass/ie8.scss
+++ b/online/assets/sass/ie8.scss
@@ -3,77 +3,48 @@
 @import 'libs/mixins';
 
 /*
-	Arcana by HTML5 UP
+	ZeroFour by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Form */
+/* Basic */
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	textarea {
-		position: relative;
+	.button,
+	.image img {
 		-ms-behavior: url('assets/js/ie/PIE.htc');
 	}
 
-/* Image */
+/* Wrappers */
 
-	.image {
-		-ms-behavior: url('assets/js/ie/PIE.htc');
-
-		img {
-			position: relative;
-			-ms-behavior: url('assets/js/ie/PIE.htc');
-		}
-	}
-
-/* Icon */
-
-	.icon {
-		&.major {
-			position: relative;
-			-ms-behavior: url('assets/js/ie/PIE.htc');
-		}
-	}
-
-/* Button */
-
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	.button {
-		position: relative;
-		-ms-behavior: url('assets/js/ie/PIE.htc');
-	}
-
-/* Box */
-
-	.box {
-		&.post {
-			.inner {
-				margin-left: 35%;
-			}
-		}
-	}
-
-/* Dropotron */
-
-	.dropotron {
-		-ms-behavior: url('assets/js/ie/PIE.htc');
-	}
-
-/* Banner */
-
-	#banner {
+	#header-wrapper {
+		background: url('../../images/header.jpg');
+		background-position: center center;
+		background-size: cover;
 		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
 	}
 
-/* Wrapper */
+	#main-wrapper {
+		.main-wrapper-style1,
+		.main-wrapper-style3 {
+			background: #f8f8f8;
+		}
+	}
 
-	.wrapper {
-		&.style2 {
-			background: #fdfdfd url('images/bg01.png');
+/* Header */
+
+	#header .inner {
+		-ms-behavior: url('assets/js/ie/PIE.htc');
+	}
+
+/* Nav */
+
+	.dropotron {
+		box-shadow: 0;
+		-ms-behavior: url('assets/js/ie/PIE.htc');
+
+		&.level-0 {
+			box-shadow: 0;
+			-ms-behavior: url('assets/js/ie/PIE.htc');
 		}
 	}
